--- a/High-availability-Internet-collection-system-and-distributed-search-application/src/main/resources/static/index.html
+++ b/High-availability-Internet-collection-system-and-distributed-search-application/src/main/resources/static/index.html
@@ -25,7 +25,7 @@
                     </a> -->
             <span class="mdui-typo-title">Flyer查分</span>
             <div class="mdui-toolbar-spacer"></div>
-            <a href="javascript:void(0);" class="mdui-btn mdui-btn-icon" mdui-dialog="{target: '#loginDialog'}">
+            <a href="javascript:void(0);" class="mdui-btn mdui-btn-icon" mdui-dialog="{target: '#loginDialog'}" id="account">
                 <i class="mdui-icon material-icons">account_circle</i>
             </a>
             <a href="#" id="username-field">←请登录</a>
@@ -195,6 +195,14 @@
                 <button class="mdui-btn mdui-ripple" id="signup-button" mdui-dialog-confirm>Signup</button>
             </div>
         </div>
+        <div class="mdui-dialog" id="exitDialog">
+            <div class="mdui-dialog-title">Exit</div>
+            <div class="mdui-dialog-content">您想要退出当前账户吗？</div>
+            <div class="mdui-dialog-actions">
+                <button class="mdui-btn mdui-ripple">cancel</button>
+                <button class="mdui-btn mdui-ripple" id="exit-button">confirm</button>
+            </div>
+        </div>
     </div>
 
     <script src="./js/jquery-3.2.1.min.js"></script>
@@ -204,6 +212,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chartist/0.11.0/chartist.js"></script>
     <script src="js/chart.js"></script>
     <script src="chartist-plugin-tooltip-master/dist/chartist-plugin-tooltip.js"></script>
+    <script src="js/cookieUtils.js"></script>
     <script src="js/CutoffView.js"></script>
     <script src="js/index.js"></script>
 </body>
