--- a/High-availability-Internet-collection-system-and-distributed-search-application/src/main/resources/static/Administration.html
+++ b/High-availability-Internet-collection-system-and-distributed-search-application/src/main/resources/static/Administration.html
@@ -14,7 +14,7 @@
     <link href="./css/mdui.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="mdui-theme-primary-blue mdui-theme-accent-pink mdui-theme-layout-dark">
     <div class="mdui-container">
         <div class="mdui-row">
             <div class="mdui-typo">
@@ -29,14 +29,15 @@
                 <div class="mdui-panel-item">
                     <div class="mdui-panel-item-header">
                         <div class="mdui-panel-item-title">www.baidu.com</div>
-                        <div class="mdui-panel-item-summary">3层</div>
-                        <div class="mdui-panel-item-summary">静态</div>
-                        <div class="mdui-panel-item-summary">未采集</div>
-                        <div class="mdui-panel-item-summary">创建于2018:7:16:17:08</div>
-                        <div class="mdui-panel-item-summary">于2018:7:16:17:08采集完成</div>
                         <i class="mdui-panel-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
                     </div>
                     <div class="mdui-panel-item-body">
+                        <ul class="mdui-list">
+                            <li class="mdui-list-item mdui-ripple">3层 静态</li>
+                            <li class="mdui-list-item mdui-ripple">创建于2018:7:16:17:08 于2018:7:16:17:08采集完成</li>
+                            <li class="mdui-list-item mdui-ripple">target</li>
+                            <li class="mdui-list-item mdui-ripple">headers</li>
+                        </ul>
                         <div class="mdui-table-fluid">
                             <table class="mdui-table mdui-table-hoverable">
                                 <thead>
@@ -58,10 +59,22 @@
                 </div>
             </div> -->
         </div>
-        <div class="mdui-row mdui-col-xs-2">
-            <button class="mdui-fab mdui-fab-fixed mdui-ripple mdui-color-pink-400" mdui-dialog="{target: '#example'}">
+        <div class="mdui-fab-wrapper" mdui-fab id="exampleFab">
+            <button class="mdui-fab mdui-ripple mdui-color-theme-accent">
+                <!-- 默认显示的图标 -->
                 <i class="mdui-icon material-icons">add</i>
+
+                <!-- 在拨号菜单开始打开时，平滑切换到该图标，若不需要切换图标，则可以省略该元素 -->
+                <i class="mdui-icon mdui-fab-opened material-icons">mode_edit</i>
             </button>
+            <div class="mdui-fab-dial">
+                <button class="mdui-fab mdui-fab-mini mdui-ripple mdui-color-pink" mdui-dialog="{target: '#example'}">
+                    <i class="mdui-icon material-icons">backup</i>
+                </button>
+                <button class="mdui-fab mdui-fab-mini mdui-ripple mdui-color-blue" mdui-dialog="{target: '#delete-dialog'}">
+                    <i class="mdui-icon material-icons">touch_app</i>
+                </button>
+            </div>
         </div>
         <div class="mdui-dialog" id="example">
             <div class="mdui-dialog-title">添加一个新的模板</div>
@@ -88,6 +101,12 @@
                 </div>
                 <div class="mdui-row mdui-m-t-2 mdui-m-b-2">
                     <div class="mdui-textfield mdui-textfield-floating-label mdui-col-xs-12">
+                        <label class="mdui-textfield-label">目标方法url</label>
+                        <textarea class="mdui-textfield-input" id="target_field"></textarea>
+                    </div>
+                </div>
+                <div class="mdui-row mdui-m-t-2 mdui-m-b-2">
+                    <div class="mdui-textfield mdui-textfield-floating-label mdui-col-xs-12">
                         <label class="mdui-textfield-label">请求头</label>
                         <textarea class="mdui-textfield-input" id="headers_field"></textarea>
                     </div>
@@ -99,7 +118,7 @@
                     </div>
                 </div>
                 <div id="dialog-content">
-                    
+
                 </div>
             </div>
             <div class="mdui-dialog-actions">
@@ -107,13 +126,25 @@
                 <button class="mdui-btn mdui-ripple" mdui-dialog-confirm id="submit">submit</button>
             </div>
         </div>
-    </div>
+        <div class="mdui-dialog" id="delete-dialog">
+            <div class="mdui-dialog-title">删除指定模板</div>
+            <div class="mdui-dialog-content">
+                <div class="mdui-textfield mdui-textfield-floating-label">
+                    <label class="mdui-textfield-label">请输入页面中需要删除的模板的序号</label>
+                    <input class="mdui-textfield-input" id="index_field" type="text" />
+                </div>
+                <div class="mdui-dialog-actions">
+                    <button class="mdui-btn mdui-ripple" mdui-dialog-close>cancel</button>
+                    <button class="mdui-btn mdui-ripple" mdui-dialog-confirm id="delete-button">Delete</button>
+                </div>
+            </div>
+        </div>
 
-    <script src="./js/jquery-3.2.1.min.js"></script>
-    <!-- <script src="../js/bootstrap.min.js"></script>
+        <script src="./js/jquery-3.2.1.min.js"></script>
+        <!-- <script src="../js/bootstrap.min.js"></script>
         <script src="../js/Proper.js"></script> -->
-    <script src="./js/mdui.js"></script>
-    <script src="./js/administration.js"></script>
+        <script src="./js/mdui.js"></script>
+        <script src="./js/administration.js"></script>
 </body>
 
 </html>
